--- a/archlinux/scripts/install.txt
+++ b/archlinux/scripts/install.txt
@@ -84,3 +84,12 @@ lspci | grep VGA #discovery card
 
 #intel
 pacman -S xf86-video-intel
+
+#install i3
+sudo pacman -S i3 dmenu
+ 
+#add in ~/.xinitrc
+exec i3
+#end
+ 
+i3-config-wizard
